--- a/Halloapp/de.lproj/Localizable.strings
+++ b/Halloapp/de.lproj/Localizable.strings
@@ -154,6 +154,15 @@
 /* Title for call history event. Appears next to details of a missed call. */
 "call.history.voice.call.missed" = "Verpasster Sprachanruf";
 
+/* Status display when user mutes their own audio during a call. */
+"call.mute.local.audio" = "Mikrofon ist ausgeschaltet";
+
+/* Status display when user mutes their own audio and video during a call. */
+"call.mute.local.audio.video" = "Kamera und Mikrofon sind ausgeschaltet";
+
+/* Status display when user mutes their own video during a call. */
+"call.mute.local.video" = "Kamera ist ausgeschaltet";
+
 /* Status display when peer mutes audio during a call. */
 "call.mute.remote.audio" = "%@ hat diesen Anruf stumm geschaltet";
 
@@ -551,7 +560,7 @@
 "feed.post.archived.timestamp" = "Archiviert am %@";
 
 /* Shown when post fails or is canceled. */
-"feed.post.failed" = "Fehler beim Posten.";
+"feed.post.failed" = "Das Posten ist fehlgeschlagen.";
 
 /* Shown when receiving a new (unsupported) type of post. */
 "feed.post.unsupported" = "Deine HalloApp-Version unterstützt diese Art von Beitrag nicht.";
@@ -1067,7 +1076,7 @@
 "picker.media.fail.message" = "Versuch es bitte noch einmal oder wähle ein anderes Foto oder Video aus.";
 
 /* Alert title in media picker when unable to load media file. */
-"picker.media.fail.title" = "Fehler beim Laden der Mediendatei";
+"picker.media.fail.title" = "Mediendatei konnte nicht geladen werden";
 
 /* Button shown to update limited access to media. */
 "picker.media.limit.button" = "Aktualisieren";
@@ -1110,6 +1119,9 @@
 
 /* Generic setting value telling how many contacts are blocked or muted. */
 "privacy.n.contacts" = "privacy.n.contacts";
+
+/* Error banner displayed when there is a failure syncing preivacy settings, displayed on the privacy view */
+"privacy.sync.failure" = "Privatsphäre-Einstellungen konnten nicht synchronisiert werden. Bitte versuche es später noch einmal.";
 
 /* Title for the button allowing to delete current profile photo. */
 "profile.delete.photo" = "Foto löschen";
@@ -1174,6 +1186,9 @@
 
 /* Title for the screen allowing to edit profile name */
 "profile.title.your.name" = "Dein Name";
+
+/* Title for the button allowing the user to view their own profile photo. */
+"profile.view.photo" = "Foto ansehen";
 
 /* Disclaimer text about receiving SMS verification code */
 "registration.code.disclaimer" = "Verifizierungscode wird zugeschickt. \nKosten deines Service-Providers könnten anfallen.";
@@ -1566,5 +1581,5 @@
 "your.post.externalshare.button" = "Extern teilen";
 
 /* Message that external share failed. */
-"your.post.externalshare.error" = "Fehler beim Laden, um extern zu teilen";
+"your.post.externalshare.error" = "Beitrag für externe Freigabe konnte nicht hochgeladen werden";
 
