--- a/Halloapp/Base.lproj/Localizable.stringsdict
+++ b/Halloapp/Base.lproj/Localizable.stringsdict
@@ -2,6 +2,22 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>n.others.replied</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@n_others_replied@</string>
+		<key>n_others_replied</key>
+		<dict>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>one</key>
+			<string>&lt;$user$&gt; and %d other replied to &lt;$author$&gt;&apos;s post</string>
+			<key>other</key>
+			<string>&lt;$user$&gt; and %d others replied to &lt;$author$&gt;&apos;s post</string>
+		</dict>
+	</dict>
 	<key>n.invites.count</key>
 	<dict>
 		<key>NSStringLocalizedFormatKey</key>
