--- a/Halloapp/nl.lproj/Localizable.stringsdict
+++ b/Halloapp/nl.lproj/Localizable.stringsdict
@@ -164,6 +164,22 @@
 			<string>Je hebt nog %d uitnodigingen over</string>
 		</dict>
 	</dict>
+	<key>n.others.replied</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@n_others_replied@</string>
+		<key>n_others_replied</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>one</key>
+			<string>&lt;$user$&gt; en %d ander hebben geantwoord op de post van &lt;$author$&gt;</string>
+			<key>other</key>
+			<string>&lt;$user$&gt; en %d anderen hebben geantwoord op de post van &lt;$author$&gt;</string>
+		</dict>
+	</dict>
 	<key>notification.n.photos</key>
 	<dict>
 		<key>NSStringLocalizedFormatKey</key>
